--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>Sup React</title>
+    <title>Æther</title>
     <link rel="stylesheet" href="css/libs.css">
     <link rel="stylesheet" href="css/app.css">
     <script src="js/libs.js" defer></script>
