--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,12 +2,19 @@
 <html>
 
 <head>
-    <meta charset="UTF-8" />
-    <title>Æther</title>
+    <meta charset="UTF-8" content="text/html;charset=utf-8"  />
+    <meta name="viewport" content="initial-scale=1.0" />
+    <title>Æther - A Gaming Guild</title>
     <link rel="stylesheet" href="css/libs.css">
     <link rel="stylesheet" href="css/app.css">
     <script src="js/libs.js" defer></script>
     <script src="js/app.js" defer></script>
+
+    <meta property="og:locale" content="en_EN" />
+    <meta property="og:url" content="http://aetherguild.net" />
+    <meta property="og:title" content="Æther - A Gaming Guild" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="AetherGuild.net" />
 </head>
 
 <body>
