--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <meta charset="UTF-8" content="text/html;charset=utf-8"  />
-    <meta name="viewport" content="initial-scale=1.0" />
     <title>Æther - A Gaming Guild</title>
+
+    <meta charset="UTF-8" content="text/html;charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Trade+Winds" rel="stylesheet">
     <link rel="stylesheet" href="css/libs.css">
     <link rel="stylesheet" href="css/app.css">
     <script src="js/libs.js" defer></script>
@@ -16,10 +18,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="AetherGuild.net" />
 </head>
-
 <body>
-    <div id="app">
-    </div>
+    <div id="app"></div>
 </body>
-
 </html>
